--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "boxicons": "^2.1.4",
-    "locomotive-scroll": "^4.1.4",
+    "locomotive-scroll": "^4.1.4"
+  },
+  "devDependencies": {
     "tailwindcss": "^3.2.4"
   }
 }
